--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 
 services:
 
@@ -11,37 +11,40 @@ services:
 
   kafka:
     image: bitnami/kafka:latest
-    ports:
-      - "9092:9092"
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENERS: PLAINTEXT://:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      ALLOW_PLAINTEXT_LISTENER: "yes"
+      KAFKA_CFG_NODE_ID: 1
+      KAFKA_CFG_PROCESS_ROLES: controller,broker
+      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
+      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
     depends_on:
-      - zookeeper\
-  
+      - zookeeper
+
   app:
     build:
       context: .           
-      dockerfile: dockerfile
+      dockerfile: Dockerfile
     depends_on:
       - kafka
     command: python scheduler.py
     env_file:
-      - .env               
-
+      - .env
+    network_mode: host
+    restart: always               
 
   tiktok_gatherer:
     build:
       context: ./gatherers/tiktok
       dockerfile: Dockerfile
+    network_mode: host
     depends_on:
       - kafka
     command: python tiktok_gatherer.py
     env_file:
       - ./gatherers/tiktok/.env
+    restart: always
 
   mongo_writer:
     build:
@@ -49,8 +52,8 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - kafka
-      - mongo
     command: python mongo_writer.py
     env_file:
-      - ../.env
-    
+      - .env
+    network_mode: host
+    restart: always
