--- a/gatherers/tiktok/Dockerfile
+++ b/gatherers/tiktok/Dockerfile
@@ -14,6 +14,14 @@ ENV PYTHONUNBUFFERED=1
 
 # Add the parent of 'gatherers' to PYTHONPATH (assuming it's one level up from current)
 ENV PYTHONPATH=/app:/app/..
+RUN apt-get update && apt-get install -y curl \
+    && rm -rf /var/lib/apt/lists/*
+RUN curl -o wait-for-it.sh https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh \
+    && chmod +x wait-for-it.sh
 
-# Start the app
-CMD ["python", "tiktok_consumer.py"]
+RUN chmod +x wait-for-it.sh
+
+# Default command (optional)
+ENTRYPOINT ["/app/wait-for-it.sh", "kafka:9092", "--timeout=60", "--", "python", "tiktok_consumer.py"]
+
+
