--- a/consumers/mongo_writer/Dockerfile
+++ b/consumers/mongo_writer/Dockerfile
@@ -3,5 +3,11 @@ WORKDIR /app
 COPY . .
 RUN pip install -r requirements.txt
 ENV PYTHONPATH=/app:/app/..
-CMD ["python", "mongo_writer.py"]
+RUN apt-get update && apt-get install -y curl \
+    && rm -rf /var/lib/apt/lists/*
+RUN curl -o wait-for-it.sh https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh \
+    && chmod +x wait-for-it.sh
 
+RUN chmod +x wait-for-it.sh
+
+ENTRYPOINT ["/app/wait-for-it.sh", "kafka:9092", "--timeout=60", "--", "python", "mongo_writer.py"]
